# pydfs

./: .gitignore  CONVERSATION_LOG.md  DEV_NOTES.md  README.md  nfl_lineups.csv  pyproject.toml
scripts/: api_client.py
src/pydfs/: __init__.py  cli.py  config_loader.py
src/pydfs/api/: __init__.py
src/pydfs/api/schemas/: __init__.py  batch.py  lineup.py  mapping.py
src/pydfs/config/: __init__.py  roster.py
src/pydfs/ingest/: __init__.py  projections.py
src/pydfs/models/: __init__.py  player.py
src/pydfs/optimizer/: __init__.py  service.py
src/pydfs/persistence/: __init__.py
src/pydfs/pool/: __init__.py  export.py  filtering.py
tests/: __init__.py  test_api.py  test_ingest_projections.py  test_optimizer_service.py  test_player_model.py  test_roster_config.py
