[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pydfs"
version = "0.1.0"
description = "DFS optimizer toolkit powered by pydfs-lineup-optimizer"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydfs-lineup-optimizer>=3.6",
    "pydantic>=2.7",
    "numpy>=1.26",
    "pandas>=2.2",
    "fastapi>=0.112",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
    "types-requests",
]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra --strict-markers"
testpaths = [
    "tests",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
strict = true
plugins = []

[project.scripts]
pydfs = "pydfs.cli:main"
